@@ -328,7 +328,7 @@ msg_err_must_belong_town: '&cYou must belong to a town.'
 msg_err_dont_belong_town: '&cYou don''t belong to a town.'
 msg_err_dont_belong_nation: '&bYou don''t belong to a nation.'
 msg_err_not_same_nation: '&b%s doesn''t belong to your nation.'
-msg_err_rect_auto: '&cOnly towns can use auto.'
+msg_err_area_auto: '&cOnly towns can use auto.'
 msg_err_invalid_radius: '&cInvalid radius. Use an integer or ''auto''.'
 msg_err_not_configured: '&cThis world has not been configured by Towny.'
 msg_err_updating_item_perms: '&cError updating item use permissions cache.'
